# unblock

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEV-ROADMAP.md  LICENSE-APACHE  LICENSE-MIT  README.md
.beads/: metadata.json
.claude/: settings.local.json
.claude/agents/: infra-supervisor.md  rust-supervisor.md
.github/workflows/: ci.yml
branding/: unblock-brand-guide.md
crates/unblock-core/: Cargo.toml
crates/unblock-core/src/: cache.rs  config.rs  errors.rs  graph.rs  lib.rs  types.rs
crates/unblock-github/: Cargo.toml
crates/unblock-github/src/: client.rs  errors.rs  graphql.rs  lib.rs  mutations.rs  projects.rs
crates/unblock-github/tests/: integration.rs
crates/unblock-mcp/: Cargo.toml
crates/unblock-mcp/src/: errors.rs  main.rs  server.rs
crates/unblock-mcp/src/tools/: mod.rs
docs/: unblock-architecture-github.md  unblock-architecture-plugin.md  unblock-cicd-architecture.md  unblock-prd-github.md  unblock-prd-plugin.md  unblock-project-plan.md
docs/research/: beads-vs-unblock-comparison.md  unblock-jira-research.md
