[package]
name = "unblock-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types, graph engine, and cache for unblock"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
chrono = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
