[package]
name = "unblock-github"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub API client for unblock — GraphQL reads, REST mutations, Projects V2 fields"

[lints]
workspace = true

[dependencies]
unblock-core = { path = "../unblock-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
snafu = { workspace = true }
