[package]
name = "unblock-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server binary for unblock — 17 tools for dependency-aware task tracking"

[lints]
workspace = true

[[bin]]
name = "unblock-mcp"
path = "src/main.rs"

[dependencies]
unblock-core = { path = "../unblock-core" }
unblock-github = { path = "../unblock-github" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
snafu = { workspace = true }
